# gsl_wrapper

./: CMakeLists.txt  README.md  gsl_wrapper.hpp
source/: gsl_interp_poly2.cpp  gsl_wrapper_function_pp.cpp  gsl_wrapper_hermite_spline_obj.cpp  gsl_wrapper_integration.cpp  gsl_wrapper_minimizer.cpp  gsl_wrapper_odeiv2_data.cpp  gsl_wrapper_odeiv2_solver.cpp  gsl_wrapper_rootfinder.cpp  gsl_wrapper_spline_obj.cpp
